client/select2.styl
.select.selectize-control {
  border-radius: 11px;
}

.error {
  color: #710F11;
}

.selectize-input {
  padding: 15px 30px;
  line-height: 1;
  border-radius: 11px;

  & > * {
    float: left;
  }
}

.ui-select-choices {
  text-align: left;
  border-radius: 11px;

}

.ui-select-choices-row {
  padding: 15px 30px;
}

.selectize-dropdown .active {
  border-radius: 11px;
}

